--- a/deplymentregistry.yml
+++ b/deplymentregistry.yml
@@ -14,6 +14,8 @@ spec:
         image: registry.msdp.tk:5000/apache:version
         ports:
         - containerPort: 80
+        imagePullSecrets:
+        - name: regsecret
 ---
 apiVersion: v1
 kind: Service
@@ -70,6 +72,8 @@ spec:
         image: registry.msdp.tk:5000/customer:version
         ports:
         - containerPort: 8080
+        imagePullSecrets:
+        - name: regsecret        
 ---
 apiVersion: v1
 kind: Service
@@ -98,6 +102,8 @@ spec:
         image: registry.msdp.tk:5000/hystrix-dashboard:version
         ports:
         - containerPort: 8080
+        imagePullSecrets:
+        - name: regsecret        
 ---
 apiVersion: v1
 kind: Service
@@ -126,6 +132,8 @@ spec:
         image: registry.msdp.tk:5000/order:version
         ports:
         - containerPort: 8080
+        imagePullSecrets:
+        - name: regsecret        
 ---
 apiVersion: v1
 kind: Service
